[gd_scene load_steps=3 format=3 uid="uid://4mo2wrx4p8ms"]

[ext_resource type="Script" path="res://Scripts/componente_interactuar.gd" id="1_s0gyx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nxtp6"]
radius = 20.025

[node name="ComponenteInteractuar" type="Node2D"]
script = ExtResource("1_s0gyx")

[node name="RangoIntera" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangoIntera"]
shape = SubResource("CircleShape2D_nxtp6")

[node name="TextoInt" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -71.0
offset_right = 43.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
text = "Presiona E para usar"

[connection signal="area_entered" from="RangoIntera" to="." method="_on_rango_intera_area_entered"]
[connection signal="area_exited" from="RangoIntera" to="." method="_on_rango_intera_area_exited"]
